--- a/cliente/pages/second-page.html
+++ b/cliente/pages/second-page.html
@@ -3,24 +3,34 @@
     <style>
       :host {
       }
-      #paper_input {
+      #user {
         margin-bottom: 30px;
+        width: 95%;
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 5px;
+        font-size: 15px;
         background-color: rgb(249, 246, 246);
       }
-      #paper_input1 {
+      #password {
         margin-bottom: 30px;
+        width: 95%;
+        padding-left: 10px;
+        padding-top: 5px;
+        padding-right: 10px;
+        font-size: 15px;
         background-color: rgb(249, 246, 246);
       }
       #core_card1 {
-        width: 70%;
-        height: 60%;
+        width: 300px;
+        height: 200px;
         border-top-left-radius: 2px;
         border-top-right-radius: 2px;
         border-bottom-right-radius: 2px;
         border-bottom-left-radius: 2px;
         box-shadow: rgba(0, 0, 0, 0.0980392) 0px 2px 4px, rgba(0, 0, 0, 0.0980392) 0px 0px 3px;
         padding: 20px;
-        margin: 50px 30px;
+        margin: 50px 50px;
         background-color: rgb(122, 179, 234);
       }
       core-animated-pages {
@@ -30,38 +40,37 @@
         background-size: 100% 100%;
       }
 
-      @media all and (max-width: 420px) {
-        #core_card1 {
-          width: 100%;
-        }
-      }
 
-      @media all and (min-width: 421px) {
-        #core_card1 {
-          width: 420px;
-        }
-      }
-      @media all and (max-height: 520px) {
-        #core_card1 {
-          height: 100%;
-        }
-      }
 
-      @media all and (min-height: 521px) {
-        #core_card1 {
-          height: 520px;
-        }
-      }
 
     </style>
+
+
     <core-card id="core_card1" layout vertical center>
-      <paper-input label="User..." willvalidate id="paper_input" layout vertical></paper-input>
-      <paper-input label="Password..." willvalidate id="paper_input1" layout vertical></paper-input>
+      <paper-input label="User..." willvalidate id="user" value="{{ user }}" on-keyup="{{ keypressHandler }}" layout vertical></paper-input>
+      <paper-input label="Password..." willvalidate id="password" value="{{ password }}" on-keyup="{{ keypressHandler }}" layout vertical></paper-input>
       <paper-button label="Entry" id="paper_button"></paper-button>
     </core-card>
   </template>
   <script>
     Polymer({
+      keypressHandler: function (event, detail, sender) {
+        var code = event.keyCode;
+        valor = sender.value;
+        if (code == 13){
+          if (valor == null || valor.length == 0 || /^\s+$/.test(valor)) {
+            console.log("campo vacio");
+          }else{
+            console.log(valor);
+          }
+        }
+      },
+      validateField: function (text) {
+
+        string(text)
+
+      }
+
     });
   </script>
 </polymer-element>
