--- a/cliente/index.html
+++ b/cliente/index.html
@@ -25,7 +25,8 @@
     <link rel="import" href="lib/flatiron-director/flatiron-director.html"> 
     <link rel="import" href="main-menu.html"> 
     <link rel="import" href="pages/main-page.html"> 
-    <link rel="import" href="pages/second-page.html"> 
+    <link rel="import" href="pages/second-page.html">
+    <link rel="import" href="pages/search-page.html">
   
 </head>
 <body unresolved fullbleed>
