--- a/cliente/index.html
+++ b/cliente/index.html
@@ -22,6 +22,7 @@
         <link rel="import" href="bower_components/core-header-panel/core-header-panel.html">
         <link rel="import" href="bower_components/core-menu/core-submenu.html">
         <link rel="import" href="bower_components/core-item/core-item.html">
+        <link rel="import" href="bower_componentsbower_components/core-dropdown-menu/core-dropdown-menu.html">
 
 
         <link rel="import" href="lib/flatiron-director/flatiron-director.html"> 
