Core-card in mainPage

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -30,7 +30,7 @@
         <link rel="import" href="pages/main-page.html"> 
         <link rel="import" href="pages/second-page.html">
         <link rel="import" href="pages/search-page.html">
-        <link rel="import" href="pages/prueba-search.html">
+        <link rel="import" href="pages/profile-page.html">
 
     </head>
     <body unresolved fullbleed>
